@@ -338,8 +338,8 @@ module ActiveMerchant #:nodoc:
           response,
           error_code: error_code_from(succeeded, response),
           authorization: authorization_from(action, response),
-          avs_result: AVSResult.new(code: response["AVSCode"]),
-          cvv_result: CVVResult.new(response["CVV2Response"]),
+          avs_result: AVSResult.new(code: response["avsRslt"]),
+          cvv_result: CVVResult.new(response["secRslt"]),
           test: test?
         )
       end
